--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-node@master
       - run: npm install
       - run: npm run build
-      - run: tar -zcvf release.tgz .nuxt static nuxt.config.js package.json package-lock.json
+      - run: tar -zcvf release.tgz .nuxt static nuxt.config.js package.json package-lock.json pm2.config.json
 
       # 发布 Release
       - name: Create Release
@@ -56,4 +56,4 @@ jobs:
             wget https://github.com/zwd95/realworld-ci/releases/latest/download/release.tgz -O release.tgz
             tar zxvf release.tgz
             npm install --production
-            pm2 reload pm2.config.js
+            pm2 reload pm2.config.json
