--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             cd /root/realworld
-            wget https://github.com/zwd95/realworld-ci/releases/latest/download/release.tgz -O release.tgz
+            wget https://140.82.112.4/zwd95/realworld-ci/releases/latest/download/release.tgz -O release.tgz
             tar zxvf release.tgz
             npm install --production
             pm2 reload pm2.config.json
